Fix spacing of right-edge icons.

--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -14,6 +14,14 @@
     color: #FFFFFF;
 }
 
+.data-catalog-top-group-icon {
+    position: relative;
+    width: 15px;
+    height: 15px;
+    fill: #CCCCCC;
+    margin-right: 16px;
+}
+
 .data-catalog-top-group-contents {
     padding-left: 16px;
 }
@@ -71,6 +79,15 @@
     display: table-cell;
     text-align: right;
     width: 20px;
+}
+
+.data-catalog-info-icon {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    fill: #CCCCCC;
+    top: 3px;
+    margin-right: 16px;
 }
 
 .data-catalog-enabled-item {
